fix spacing @ vedlejší program

--- a/source/stylesheets/sections/_extras.sass
+++ b/source/stylesheets/sections/_extras.sass
@@ -1,6 +1,6 @@
 .wr--extras
   // @extend %bg-pattern
-  padding: $section-offset*1.5 0 $section-offset
+  padding: $section-offset 0 $section-offset
 
 .se--extras
   @extend %section
